--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ var _hmt = _hmt || [];
 				[<a href="https://arxiv.org/pdf/2306.06931.pdf">arXiv</a>]
 <!-- 				[<a href="https://github.com/shiming-chen/HSVA">Code</a>]</strong><br> -->
 		 <p ><strong>Shiming Chen</strong>, Wenjin Hou, Ziming Hong, Xiaohan Ding, Yibing Song, Xinge You, Tongliang Liu, Kun Zhang.</p>
-       <p style="margin-top: -11px"><i>The Fortieth International Conference on Machine Learning (<strong> ICML </strong>), 2023. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
+       <p style="margin-top: -11px"><i>The Fortieth International Conference on Machine Learning (<strong> ICML </strong>), 2023. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
 		</td>
 	</tr>
 	<tr></tr>
@@ -241,7 +241,7 @@ var _hmt = _hmt || [];
 				[<a href="https://arxiv.org/abs/2109.15163">arXiv</a>]
 				[<a href="https://github.com/shiming-chen/HSVA">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Guo-Sen Xie, Qinmu Peng, Yang Liu, Baigui Sun, Hao Li, Xinge You, Ling Shao.</p>
-       <p style="margin-top: -11px"><i>Annual Conference on Neural Information Processing Systems (<strong> NeurIPS </strong>), 2021: 16622-16634. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
+       <p style="margin-top: -11px"><i>Annual Conference on Neural Information Processing Systems (<strong> NeurIPS </strong>), 2021: 16622-16634. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
 		</td>
 	</tr>
 	<tr></tr>
@@ -258,7 +258,7 @@ var _hmt = _hmt || [];
 				[<a href="https://arxiv.org/abs/2107.13807">arXiv</a>]</strong>
 			<strong>[<a href="https://github.com/shiming-chen/FREE">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Qinmu Peng, Xinge You, Feng Zheng, Ling Shao.</p>
-       <p style="margin-top: -11px"><i> IEEE International Conference on Computer Vision (<strong> ICCV </strong>), 2021: 1106-1112. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
+       <p style="margin-top: -11px"><i> IEEE International Conference on Computer Vision (<strong> ICCV </strong>), 2021: 1106-1112. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
 		</td>
 	</tr>
 	<tr></tr>
@@ -275,7 +275,7 @@ var _hmt = _hmt || [];
 				[<a href="https://arxiv.org/abs/2203.03137">arXiv</a>]
 				[<a href="https://github.com/shiming-chen/MSDN">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Ziming Hong,  Guo-Sen Xie, Wenhan Yang, Qinmu Peng, Kai Wang, Jian Zhao, Xinge You.</p>
-       <p style="margin-top: -11px"><i>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2022: 7612-7621. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
+       <p style="margin-top: -11px"><i>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2022: 7612-7621. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
 		</td>
 	</tr>
 	<tr></tr>
@@ -295,7 +295,7 @@ var _hmt = _hmt || [];
 			<strong>[<a href="https://arxiv.org/pdf/2112.01683.pdf">arXiv</a>]</strong>
 			<strong>[<a href="https://github.com/shiming-chen/TransZero">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen<sup>*</sup></strong>, Ziming Hong<sup>*</sup>, Yang Liu, Guo-Sen Xie, Baigui Sun, Hao Li, Qinmu Peng, Ke Lu, Xinge You.</p>
-       <p style="margin-top: -11px"><i>Thirty-Sixth AAAI Conference on Artificial Intelligence (<strong> AAAI </strong>), 2022: 330-338. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
+       <p style="margin-top: -11px"><i>Thirty-Sixth AAAI Conference on Artificial Intelligence (<strong> AAAI </strong>), 2022: 330-338. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
 		</td>
 	</tr>
 	<tr></tr>
@@ -311,7 +311,7 @@ var _hmt = _hmt || [];
 		</td>		
 		<td><a href="https://www.ijcai.org/proceedings/2022/134" target="_blank">Semantic Compression Embedding for Generative Zero-Shot Learning.</a><br>
 		<p >Ziming Hong*</strong>, <strong>Shiming Chen<sup>*#</sup></strong>, Guo-Sen Xie, Wenhan Yang, Jian Zhao, Yuanjie Shao, Qinmu Peng, Xinge You</p>
-	       <p style="margin-top: -11px"><i>The 31th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2022: 956-963. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong>
+	       <p style="margin-top: -11px"><i>The 31th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2022: 956-963. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong>
 		</td>
 	</tr>
 	<tr></tr>
@@ -325,7 +325,7 @@ var _hmt = _hmt || [];
 		</td>		
 		<td><a href="https://www.ijcai.org/proceedings/2022/134" target="_blank">Both Diverse and Realism Matter: Physical Attribute and Style Alignment for Rainy Image Generation.</a><br>
 		<p > Changfeng Yu, <strong>Shiming Chen<sup></sup></strong>, Yi Chang, Yibing Song, Luxin Yan</p>
-	       <p style="margin-top: -11px"><i>IEEE International Conference on Computer Vision (<strong> ICCV </strong>), 2023. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong>
+	       <p style="margin-top: -11px"><i>IEEE International Conference on Computer Vision (<strong> ICCV </strong>), 2023. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong>
 		</td>
 	</tr>
 	<tr></tr>
@@ -340,7 +340,7 @@ var _hmt = _hmt || [];
 		<td><a href="https://www.ijcai.org/proceedings/2021/0153.pdf" target="_blank">Norm-guided Adaptive Visual Embedding for Zero-Shot Sketch-Based Image Retrieval.</a>
 			<strong>[<a href="https://www.ijcai.org/proceedings/2021/0153.pdf">PDF</a>]</strong><br>
 		<p >Wenjie Wang, Yufeng Shi, <strong>Shiming Chen</strong>, Qinmu Peng, Feng Zheng, Xinge You</p>
-	       <p style="margin-top: -11px"><i>The 30th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2021. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong>
+	       <p style="margin-top: -11px"><i>The 30th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2021. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong>
 		</td>
 	</tr>
 	<tr></tr>
