--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@ var _hmt = _hmt || [];
 <!-- 		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1kR4y1w7yj">Video</a>] -->
 	</li>
 	<li>
-		<div style="float:left; text-align:left; color:＃BDB76B"><strong>Extreme Mart (极市)</strong></div> <div style="float:right; text-align:right">Feb. 2022</div><br>
+		<div style="float:left; text-align:left; color:＃BDB76B"><strong>Extreme Mart</strong></div> <div style="float:right; text-align:right">Feb. 2022</div><br>
 		<strong>Title</strong>: Research on Key Technology for Zero-shot Learning<br>
 <!-- 		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV14b4y1W7dp/">Video</a>] -->
 	</li>
@@ -569,7 +569,7 @@ var _hmt = _hmt || [];
 	</li>
         <li>
 		<div style="float:left; text-align:left; color:＃BDB76B"><strong>CVTE</strong></div> <div style="float:right; text-align:right">Dec. 2021</div><br>
-		<strong>Title</strong>: The Overview of Zero-Shot Learning<br>
+		<strong>Title</strong>: Recent Advances in Zero-Shot Learning<br>
 	</li>
 	<li>
 		<div style="float:left; text-align:left; color:＃BDB76B"><strong>Tencent AI Lab </strong></div> <div style="float:right; text-align:right">Dec. 2021</div><br>
