--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@ var _hmt = _hmt || [];
 	</li>
 	
 	<li>
-		<div style="float:left; text-align:left; color:＃BDB76B"><strong>National Key Laboratory of Science and Technology on Multispectral Information Processing, Huazhong University of Science and Technology</strong></div> <div style="float:right; text-align:right">Mar. 2023</div><br>
+		<div style="float:left; text-align:left; color:＃BDB76B"><strong>National Key Laboratory of Science and Technology on Multispectral Information Processing</strong></div> <div style="float:right; text-align:right">Mar. 2023</div><br>
 		<strong>Title</strong>: Deep Feature Representations Based Zero-Shot Learning<br>
 	</li>
 	<li>
