--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ var _hmt = _hmt || [];
 		I received my Ph.D. degree at Huazhong University of Science and Technology in Dec. 2022, advised by Prof. <a href="http://bmal.hust.edu.cn/info/1005/1091.html">Xinge You</a> and worked closely Prof. <a href="https://scholar.google.com/citations?user=z84rLjoAAAAJ">Ling Shao</a>.
                 My current research interests span computer vision and machine learning with a series of topics, such as <strong><i>zero-shot learning</i></strong>, <strong><i>generative modeling and learning</i></strong>, and <strong><i>visual-and-language learning</i></strong>. </span> <br> <br> 
 <!-- 	       <span>I am the <a href="http://valser.org/article-634-1.html">AC</a> of <strong>VALSE</strong>.</span><br> -->
-<!-- 	  <span style="color:Red">I'm Looking forward to a position for work or postdoc researcher, please feel free to drop me an email if you have the relevant position.</span> -->
+<!-- 	  <span style="color:Red"><strong>Open Position:</strong> If you are interested in my research and would like to work with me as an intern/visiting student in the MBZUAI, feel free to contact me. </span> -->
     </div>
 	 
 
@@ -231,6 +231,41 @@ var _hmt = _hmt || [];
 	<tr></tr>
 	<tr></tr>	
 
+
+<tr>
+	
+		<td width="206">
+		<img src="img/CVPR22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://openaccess.thecvf.com/content/CVPR2022/html/Chen_MSDN_Mutually_Semantic_Distillation_Network_for_Zero-Shot_Learning_CVPR_2022_paper.html" target="_blank"> MSDN: Mutually Semantic Distillation Network for Zero-Shot Learning.</a>
+			<strong>[<a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Chen_MSDN_Mutually_Semantic_Distillation_Network_for_Zero-Shot_Learning_CVPR_2022_paper.pdf">PDF</a>]
+				[<a href="https://arxiv.org/abs/2203.03137">arXiv</a>]
+				[<a href="https://github.com/shiming-chen/MSDN">Code</a>]</strong><br>
+		 <p ><strong>Shiming Chen</strong>, Ziming Hong,  Guo-Sen Xie, Wenhan Yang, Qinmu Peng, Kai Wang, Jian Zhao, Xinge You.</p>
+       <p style="margin-top: -11px"><i>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2022: 7612-7621. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>	
+	
+		
+	
+<tr>
+	
+		<td width="206">
+		<img src="img/TransZero-AAAI22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://ojs.aaai.org/index.php/AAAI/article/view/19909" target="_blank"> TransZero: Attribute-guided Transformer for Zero-Shot Learning.</a>
+			<strong>[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/19909">PDF</a>]</strong>
+			<strong>[<a href="https://arxiv.org/pdf/2112.01683.pdf">arXiv</a>]</strong>
+			<strong>[<a href="https://github.com/shiming-chen/TransZero">Code</a>]</strong><br>
+		 <p ><strong>Shiming Chen<sup>*</sup></strong>, Ziming Hong<sup>*</sup>, Yang Liu, Guo-Sen Xie, Baigui Sun, Hao Li, Qinmu Peng, Ke Lu, Xinge You.</p>
+       <p style="margin-top: -11px"><i>Thirty-Sixth AAAI Conference on Artificial Intelligence (<strong> AAAI </strong>), 2022: 330-338. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	
 <tr>
 	
 		<td width="206">
@@ -264,42 +299,7 @@ var _hmt = _hmt || [];
 	<tr></tr>
     <tr></tr>
     <tr></tr>	    
-	    
-<tr>
 	
-		<td width="206">
-		<img src="img/CVPR22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://openaccess.thecvf.com/content/CVPR2022/html/Chen_MSDN_Mutually_Semantic_Distillation_Network_for_Zero-Shot_Learning_CVPR_2022_paper.html" target="_blank"> MSDN: Mutually Semantic Distillation Network for Zero-Shot Learning.</a>
-			<strong>[<a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Chen_MSDN_Mutually_Semantic_Distillation_Network_for_Zero-Shot_Learning_CVPR_2022_paper.pdf">PDF</a>]
-				[<a href="https://arxiv.org/abs/2203.03137">arXiv</a>]
-				[<a href="https://github.com/shiming-chen/MSDN">Code</a>]</strong><br>
-		 <p ><strong>Shiming Chen</strong>, Ziming Hong,  Guo-Sen Xie, Wenhan Yang, Qinmu Peng, Kai Wang, Jian Zhao, Xinge You.</p>
-       <p style="margin-top: -11px"><i>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2022: 7612-7621. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>	
-	
-	
-
-	
-	
-<tr>
-	
-		<td width="206">
-		<img src="img/TransZero-AAAI22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://ojs.aaai.org/index.php/AAAI/article/view/19909" target="_blank"> TransZero: Attribute-guided Transformer for Zero-Shot Learning.</a>
-			<strong>[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/19909">PDF</a>]</strong>
-			<strong>[<a href="https://arxiv.org/pdf/2112.01683.pdf">arXiv</a>]</strong>
-			<strong>[<a href="https://github.com/shiming-chen/TransZero">Code</a>]</strong><br>
-		 <p ><strong>Shiming Chen<sup>*</sup></strong>, Ziming Hong<sup>*</sup>, Yang Liu, Guo-Sen Xie, Baigui Sun, Hao Li, Qinmu Peng, Ke Lu, Xinge You.</p>
-       <p style="margin-top: -11px"><i>Thirty-Sixth AAAI Conference on Artificial Intelligence (<strong> AAAI </strong>), 2022: 330-338. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
 	
    
 	
