--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@ var _hmt = _hmt || [];
 		I received my Ph.D. degree at Huazhong University of Science and Technology in Dec. 2022, advised by Prof. <a href="http://bmal.hust.edu.cn/info/1005/1091.html">Xinge You</a> and worked closely Prof. <a href="https://scholar.google.com/citations?user=z84rLjoAAAAJ">Ling Shao</a>.
                 My current research interests span computer vision and machine learning with a series of topics, such as <strong><i>zero-shot learning</i></strong>, <strong><i>generative modeling and learning</i></strong>, and <strong><i>visual-and-language learning</i></strong>. </span> <br> <br> 
 <!-- 	       <span>I am the <a href="http://valser.org/article-634-1.html">AC</a> of <strong>VALSE</strong>.</span><br> -->
-<!-- 	  <span style="color:Red"><strong>Open Position:</strong> If you are interested in our researches (open-world learning with limited data, e.g., zero/few-shot learning, OOD, OSR) and would like to work with me as an intern/visiting student in the MBZUAI, feel free drop me email with your CV. </span> -->
+<!-- 	  <span style="color:Red"><strong>Open Position:</strong> If you are interested in our researches (open-world learning with limited data, e.g., zero/few-shot learning, OOD, OSR) and would like to work with 
+	    Prof. <a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=zh-CN">Fahad Shahbaz Khan</a> and me as an intern/visiting student in the MBZUAI, feel free drop me email with your CV. </span> -->
     </div>
 	 
 
