--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ var _hmt = _hmt || [];
 
       <h2 >News</h2>
     <div style="margin-top: 15px; overflow-y: scroll;">
+      <li><span style="color:Red">2023.08</span>, one paper is accepted to <strong><i>TEVC'23</i></strong>.</li>
       <li><span style="color:Red">2023.07</span>, one paper is accepted to <strong><i>ICCV'23</i></strong>.</li>
       <li><span style="color:Red">2023.07</span>, I am invited as an <strong><i>Area Chair (AC)</i></strong> of PRCV'23.</li>
       <li><span style="color:Red">2023.06</span>, I give a talk in University of Science and Technology of China, invited by <strong><a href="http://imcc.ustc.edu.cn/_upload/tpl/0d/13/3347/template3347/xiehongtao.html">Prof. Hongtao Xie</a></strong>.</li>
@@ -126,15 +127,14 @@ var _hmt = _hmt || [];
       <li><span style="color:Red">2022.04</span>, We have released the full codes of <strong><a href="https://arxiv.org/pdf/2112.01683.pdf">TransZero</a></strong> accepted to AAAI'22.</li>
       <li><span style="color:Red">2022.03</span>, one paper is accepted to <strong><i>CVPR'22</i></strong>.</li>
       <li><span style="color:Red">2022.02</span>, I gave a talk in Extreme Mart (极市).</li>
-      <li><span style="color:Red">2022.02</span>, one paper is accepted to <strong><i>IEEE Transactions on Neural Networks and Learning
-	      Systems (TNNLS)</i></strong>.</li>
+      <li><span style="color:Red">2022.02</span>, one paper is accepted to <strong><i>TNNLS</i></strong>.</li>
       <li><span style="color:Red">2022.02</span>, I gave a talk in AI TIME PhD-NeurIPS, invite by AI TIME.</li>
       <li><span style="color:Red">2022.01</span>, I start a Research Intern at <strong>Tencent AI Lab</strong>.</li>
       <li><span style="color:Red">2021.12</span>, one paper is accepted to <strong><i>AAAI'22</i></strong>.</li>
       <li><span style="color:Red">2021.09</span>, one paper is accepted to <strong><i>NeurIPS'21</i></strong>.</li>
       <li><span style="color:Red">2021.07</span>, one paper is accepted to <strong><i>ICCV'21</i></strong>.</li>
-      <li ><span style="color:Red">2021.05</span>, I start a Research Intern at <strong>Alibaba DAMO Academy</strong>.</li>
-      <!--<li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.04.29</span>, one co-authored paper is accepted to <strong><i>IJCAI'21</i></strong>.</li>
+      <!--<li ><span style="color:Red">2021.05</span>, I start a Research Intern at <strong>Alibaba DAMO Academy</strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.04.29</span>, one co-authored paper is accepted to <strong><i>IJCAI'21</i></strong>.</li>
       <li><span style="color:Red">2021.02</span>, one paper is accepted to <strong><i>IEEE Transactions on Evolutionary Computation (TEVC)</i></strong>.</li>
       <li><span style="color:Red">2019.09</span>, I start my Ph.D study in EIC at <strong>HUST</strong>.</li>
       <li><span style="color:Red">2019.01</span>, one paper is accepted to <strong><i>Information Sciences (INS)</i></strong>.</li>
@@ -320,7 +320,7 @@ var _hmt = _hmt || [];
     <tr></tr>
 
 
-   <tr>	
+<!--    <tr>	
 		<td width="206">
 		<img src="img/ICCV23-PCGNet.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
@@ -346,7 +346,7 @@ var _hmt = _hmt || [];
 	</tr>
 	<tr></tr>
     <tr></tr>
-    <tr></tr>
+    <tr></tr> -->
 </tbody>
 </table>
 		
@@ -354,6 +354,24 @@ var _hmt = _hmt || [];
 <tbody>	
 <h3 style="color: red">Journal Papers</h3>
 
+<tr>	
+		<td width="206">
+		<img src="img/EGANS-TEVC23.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="" target="_blank">EGANS: Evolutionary Generative Adversarial Network Search for Zero-Shot Learning.</a>
+<!-- 		<strong>[<a href="https://ieeexplore.ieee.org/document/9386237">PDF</a>]
+		 [<a href="https://arxiv.org/abs/2008.09388">arXiv</a>]</strong> -->
+                 <br>
+		<p ><strong>Shiming Chen</strong>, Shuhuang Chen, Wenjin Hou,Weiping Ding, Xinge You.</p>
+	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEVC </strong>), in press, 2023. 
+		       <strong>(<span style="color:Burlywood">SCI, IF=14.3</span>)</strong></p>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+    <tr></tr>
+
+	
 <tr>	
 		<td width="206">
 		<img src="img/TransZero-TPAMI.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
@@ -415,7 +433,7 @@ var _hmt = _hmt || [];
                  <br>
 		<p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Xinge You, Qinmu Peng, Zehong Cao, Weiping Ding.</p>
 	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEVC </strong>), 25:986-1000, 2021. 
-		       <strong>(<span style="color:Burlywood">SCI, IF=16.497</span>)</strong></p>
+		       <strong>(<span style="color:Burlywood">SCI, IF=14.3</span>)</strong></p>
 		</td>
 	</tr>
 	<tr></tr>
