--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ var _hmt = _hmt || [];
 
       <h2 >News</h2>
     <div style="margin-top: 15px; overflow-y: scroll;">
-      <li><span style="color:Red">2023.08</span>, one paper is accepted to <strong><i>TEVC'23</i></strong>.</li>
+      <li><span style="color:Red">2023.08</span>, one paper is accepted to <strong><i>TEVC</i></strong>.</li>
       <li><span style="color:Red">2023.07</span>, one paper is accepted to <strong><i>ICCV'23</i></strong>.</li>
       <li><span style="color:Red">2023.07</span>, I am invited as an <strong><i>Area Chair (AC)</i></strong> of PRCV'23.</li>
       <li><span style="color:Red">2023.06</span>, I give a talk in University of Science and Technology of China, invited by <strong><a href="http://imcc.ustc.edu.cn/_upload/tpl/0d/13/3347/template3347/xiehongtao.html">Prof. Hongtao Xie</a></strong>.</li>
