--- a/index.html
+++ b/index.html
@@ -108,31 +108,30 @@ var _hmt = _hmt || [];
 
       <h2 >News</h2>
     <div style="margin-top: 15px; overflow-y: scroll;">
-      <li><span style="color:Red">2023.08</span>, one paper is accepted to <strong><i>TEVC</i></strong>.</li>
-      <li><span style="color:Red">2023.07</span>, one paper is accepted to <strong><i>ICCV'23</i></strong>.</li>
+      <li><span style="color:Red">2023.08</span>, one paper on zero-shot learning is accepted to <strong><i>TEVC</i></strong>.</li>
+      <li><span style="color:Red">2023.07</span>, one co-author paper on rainy image generation is accepted to <strong><i>ICCV'23</i></strong>.</li>
       <li><span style="color:Red">2023.07</span>, I am invited as an <strong><i>Area Chair (AC)</i></strong> of PRCV'23.</li>
       <li><span style="color:Red">2023.06</span>, I give a talk in University of Science and Technology of China, invited by <strong><a href="http://imcc.ustc.edu.cn/_upload/tpl/0d/13/3347/template3347/xiehongtao.html">Prof. Hongtao Xie</a></strong>.</li>
-      <li><span style="color:Red">2023.04</span>, one paper is accepted to <strong><i>ICML'23</i></strong>.</li>
+      <li><span style="color:Red">2023.04</span>, one paper on zero-shot learning is accepted to <strong><i>ICML'23</i></strong>.</li>
       <li><span style="color:Red">2023.04</span>, I give a talk in Alibaba DAMO Academic, invited by <strong>Baigui Sun</strong>.</li>
       <li><span style="color:Red">2023.04</span>, I give a talk in Huazhong Agricultural Univeristy, invited by <strong><a href="https://chenhongml.github.io/">Prof. Hong Chen</a></strong>.</li>
       <li><span style="color:Red">2023.04</span>, I give a talk in Guizhou University, invited by <strong><a href="https://scholar.google.com/citations?hl=en&user=7879e5QAAAAJ">Prof. Yisong Wang</a></strong>.</li>
       <li><span style="color:Red">2023.03</span>, I am invited as an <strong><i>Area Chair (AC)</i></strong> of VALSE, news at <strong><a href="http://valser.org/article-634-1.html">Here</a></strong>.</li>
       <li><span style="color:Red">2023.03</span>, I give a talk in National Key Laboratory of Science and Technology on Multispectral Information Processing, invited by <strong><a href="https://owuchangyuo.github.io/">Prof. Yi Chang</a></strong>.</li>
       <li><span style="color:Red">2022.12</span>, Our TransZero++ is accepted to <strong><i>TPAMI</i></strong>.</li>
-      <li><span style="color:Red">2022.10</span>, I was invited as a Reviewer for <strong><i>ICLR'23</i></strong>.</li>
       <li><span style="color:Red">2022.08</span>, I was invited as a Program Committee (PC) Member for <strong><i>AAAI'23</i></strong>.</li>
       <li><span style="color:Red">2022.05</span>, I give a talk about our CVPR'22 work (MSDN) in VALSE.</li>
       <li><span style="color:Red">2022.05</span>, I give a talk about zero-shot learning in AI TIME and AI Drive.</li>
-      <li><span style="color:Red">2022.04</span>, one paper is accepted to <strong><i>IJCAI'22</i></strong>.</li>
+      <li><span style="color:Red">2022.04</span>, one paper on zero-shot learning is accepted to <strong><i>IJCAI'22</i></strong>.</li>
       <li><span style="color:Red">2022.04</span>, We have released the full codes of <strong><a href="https://arxiv.org/pdf/2112.01683.pdf">TransZero</a></strong> accepted to AAAI'22.</li>
-      <li><span style="color:Red">2022.03</span>, one paper is accepted to <strong><i>CVPR'22</i></strong>.</li>
+      <li><span style="color:Red">2022.03</span>, one paper on zero-shot learning is accepted to <strong><i>CVPR'22</i></strong>.</li>
       <li><span style="color:Red">2022.02</span>, I gave a talk in Extreme Mart (极市).</li>
-      <li><span style="color:Red">2022.02</span>, one paper is accepted to <strong><i>TNNLS</i></strong>.</li>
+      <li><span style="color:Red">2022.02</span>, one paper on zero-shot learning is accepted to <strong><i>TNNLS</i></strong>.</li>
       <li><span style="color:Red">2022.02</span>, I gave a talk in AI TIME PhD-NeurIPS, invite by AI TIME.</li>
       <li><span style="color:Red">2022.01</span>, I start a Research Intern at <strong>Tencent AI Lab</strong>.</li>
-      <li><span style="color:Red">2021.12</span>, one paper is accepted to <strong><i>AAAI'22</i></strong>.</li>
-      <li><span style="color:Red">2021.09</span>, one paper is accepted to <strong><i>NeurIPS'21</i></strong>.</li>
-      <li><span style="color:Red">2021.07</span>, one paper is accepted to <strong><i>ICCV'21</i></strong>.</li>
+      <li><span style="color:Red">2021.12</span>, one paper on zero-shot learning is accepted to <strong><i>AAAI'22</i></strong>.</li>
+      <li><span style="color:Red">2021.09</span>, one paper on zero-shot learning is accepted to <strong><i>NeurIPS'21</i></strong>.</li>
+      <li><span style="color:Red">2021.07</span>, one paper on zero-shot learning is accepted to <strong><i>ICCV'21</i></strong>.</li>
       <!--<li ><span style="color:Red">2021.05</span>, I start a Research Intern at <strong>Alibaba DAMO Academy</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.04.29</span>, one co-authored paper is accepted to <strong><i>IJCAI'21</i></strong>.</li>
       <li><span style="color:Red">2021.02</span>, one paper is accepted to <strong><i>IEEE Transactions on Evolutionary Computation (TEVC)</i></strong>.</li>
