--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ var _hmt = _hmt || [];
 
       <h2 >News</h2>
     <div style="margin-top: 15px; overflow-y: scroll;">
-      <li><span style="color:Red">2023.08</span>, one paper on zero-shot learning is accepted to <strong><i>TEVC</i></strong>.</li>
+      <li><span style="color:Red">2023.08</span>, one paper on zero-shot learning is accepted to <strong><i>TEC</i></strong>.</li>
       <li><span style="color:Red">2023.07</span>, one co-author paper on rainy image generation is accepted to <strong><i>ICCV'23</i></strong>.</li>
       <li><span style="color:Red">2023.07</span>, I am invited as an <strong><i>Area Chair (AC)</i></strong> of PRCV'23.</li>
       <li><span style="color:Red">2023.06</span>, I give a talk in University of Science and Technology of China, invited by <strong><a href="http://imcc.ustc.edu.cn/_upload/tpl/0d/13/3347/template3347/xiehongtao.html">Prof. Hongtao Xie</a></strong>.</li>
@@ -134,7 +134,7 @@ var _hmt = _hmt || [];
       <li><span style="color:Red">2021.07</span>, one paper on zero-shot learning is accepted to <strong><i>ICCV'21</i></strong>.</li>
       <!--<li ><span style="color:Red">2021.05</span>, I start a Research Intern at <strong>Alibaba DAMO Academy</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.04.29</span>, one co-authored paper is accepted to <strong><i>IJCAI'21</i></strong>.</li>
-      <li><span style="color:Red">2021.02</span>, one paper is accepted to <strong><i>IEEE Transactions on Evolutionary Computation (TEVC)</i></strong>.</li>
+      <li><span style="color:Red">2021.02</span>, one paper is accepted to <strong><i>IEEE Transactions on Evolutionary Computation (TEC)</i></strong>.</li>
       <li><span style="color:Red">2019.09</span>, I start my Ph.D study in EIC at <strong>HUST</strong>.</li>
       <li><span style="color:Red">2019.01</span>, one paper is accepted to <strong><i>Information Sciences (INS)</i></strong>.</li>
       <li><span style="color:Red">2018.10</span>, one paper is accepted to <strong><i>ACTA AUTOMATICA SINICA</i></strong>. </li> -->
@@ -362,7 +362,7 @@ var _hmt = _hmt || [];
 		 [<a href="https://arxiv.org/abs/2008.09388">arXiv</a>]</strong> -->
                  <br>
 		<p ><strong>Shiming Chen</strong>, Shuhuang Chen, Wenjin Hou,Weiping Ding, Xinge You.</p>
-	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEVC </strong>), in press, 2023. 
+	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEC </strong>), in press, 2023. 
 		       <strong>(<span style="color:Burlywood">SCI, IF=14.3</span>)</strong></p>
 		</td>
 	</tr>
@@ -431,7 +431,7 @@ var _hmt = _hmt || [];
 		 <!--[<a href="CDE-GAN-website/CDE-GAN.html">Project Page</a>]</strong>-->
                  <br>
 		<p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Xinge You, Qinmu Peng, Zehong Cao, Weiping Ding.</p>
-	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEVC </strong>), 25:986-1000, 2021. 
+	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEC </strong>), 25:986-1000, 2021. 
 		       <strong>(<span style="color:Burlywood">SCI, IF=14.3</span>)</strong></p>
 		</td>
 	</tr>
