--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@ var _hmt = _hmt || [];
 		<img src="img/EGANS-TEVC23.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="" target="_blank">EGANS: Evolutionary Generative Adversarial Network Search for Zero-Shot Learning.</a>
-<!-- 		<strong>[<a href="https://ieeexplore.ieee.org/document/9386237">PDF</a>]
-		 [<a href="https://arxiv.org/abs/2008.09388">arXiv</a>]</strong> -->
+		<strong>[<a href="https://ieeexplore.ieee.org/document/10225587">PDF</a>]
+		 [<a href="https://arxiv.org/abs/2308.09915">arXiv</a>]</strong>
                  <br>
 		<p ><strong>Shiming Chen</strong>, Shuhuang Chen, Wenjin Hou,Weiping Ding, Xinge You.</p>
 	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEC </strong>), in press, 2023. 
