--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/EGANS-TEVC23.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">EGANS: Evolutionary Generative Adversarial Network Search for Zero-Shot Learning.</a>
+		<td><a href="https://ieeexplore.ieee.org/document/10225587" target="_blank">EGANS: Evolutionary Generative Adversarial Network Search for Zero-Shot Learning.</a>
 		<strong>[<a href="https://ieeexplore.ieee.org/document/10225587">PDF</a>]
 		 [<a href="https://arxiv.org/abs/2308.09915">arXiv</a>]</strong>
                  <br>
