--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ var _hmt = _hmt || [];
 
       <h2 >News</h2>
     <div style="margin-top: 15px; overflow-y: scroll;">
+      <li><span style="color:Red">2023.09</span>, I give a talk in ZHEJIANG LAB, invited by <strong>Jin Zhao</strong>.</li>
       <li><span style="color:Red">2023.08</span>, one paper on zero-shot learning is accepted to <strong><i>TEC</i></strong>.</li>
       <li><span style="color:Red">2023.07</span>, one co-author paper on rainy image generation is accepted to <strong><i>ICCV'23</i></strong>.</li>
       <li><span style="color:Red">2023.07</span>, I am invited as an <strong><i>Area Chair (AC)</i></strong> of PRCV'23.</li>
@@ -515,10 +516,10 @@ var _hmt = _hmt || [];
 	PRCV'23, VALSE.<br>
 	   
 	<strong>Journal Reviewers:</strong> 
-	TPAMI, IJCV, TIP, TNNLS, TEVC, TCYB, TSMCA, TITS, TII, TMM, TASE, etc.<br>
+	TPAMI, IJCV, TIP, TNNLS, TEC, TCYB, TSMCA, TITS, TII, TMM, TASE, TIV, etc.<br>
 	
 	<strong>Conference PC/Reviewers:</strong> 
-	ICLR'23, NeurIPS'23, IJCAI(2021, 2022),  CVPR(2022, 2023), ICCV (2021,2023), ECCV'22, ACM MM'21, AAAI(2022,2023).
+	ICLR'23-24, NeurIPS'23, IJCAI'21-23,  CVPR'22-23, ICCV'21-23, ECCV'22, ACM MM'21, AAAI'22-23.
     </div>
 	
 	 
