--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@ var _hmt = _hmt || [];
 	   <span>
          A key challenge of artificial intelligence is to generalize machine learning models from seen data to unseen scenarios.
 	<strong><i>Zero-shot learning (ZSL)</i></strong> is a typical research topic targeting this goal. ZSL aims to classify the images of unseen classes by constructing a mapping relationship between the semantic and visual domains.
-	Although ZSL has achieved significant progress, there have a numbers of essential challenges.<br><br>
+	Although ZSL has achieved significant progress, there have a numbers of essential challenges. Recently, large-scale VLM-based ZSL method is popular, e.g., CLIP, it is an extension of the classical ZSL. <br><br>
 		   
-         Dr. Shiming Chen has been focusing on tackling bottleneck challenges to promote ZSL, covering fundamental questions of
+         Dr. Shiming Chen has been focusing on tackling bottleneck challenges to promote ZSL (especially for the classical ZSL), covering fundamental questions of
          <i>How to enhance the visual features by alleviating the cross-dataset bias between ImageNet and ZSL benchmarks? 
 	 How to discover the intrinsic semantic knowledge by alleviating the visual-semantic domain shift problem? 
 	How to align the visual and semantic features in a common space by reducing the discrepancy between the heterogeneous visual-semantic representations?</i>
@@ -161,7 +161,7 @@ var _hmt = _hmt || [];
          As for the embedding-based ZSL, a graph-guided dual attention network is introduced to fuse the local visual features and explicit global visual features
 	to enhance visual features. As for the generative ZSL, several feature refinement learning methods are proposed to enhance the visual features and encourage
 	the generator to synthesize realistic visual features for unseen classes. The papers of this project have been published in 
-	<i> ICCV'21, IEEE TEC'21, IJCAI'22, IEEE TNNLS'22, IEEE TPAMI'22, </i>, etc.<br> <br> 
+	<i> ICCV'21, IJCAI'22, IEEE TNNLS'22, IEEE TPAMI'22, IEEE TEC'23</i>, etc.<br> <br> 
 		   
         <strong>2. Developing the effective ZSL algorithms to tackle the visual-semantic domain shift problem. </strong> 
 	As for the embedding-based ZSL, a attribute-guided Transformer network and mutually semantic distillation network are proposed to learn the intrinsic 
