--- a/index.html
+++ b/index.html
@@ -163,9 +163,7 @@ var _hmt = _hmt || [];
 	the generator to synthesize realistic visual features for unseen classes. The papers of this project have been published in 
 	<i> <a href="https://openaccess.thecvf.com/content/ICCV2021/html/Chen_FREE_Feature_Refinement_for_Generalized_Zero-Shot_Learning_ICCV_2021_paper.html" target="_blank"> ICCV'21</a>, 
 	<a href="https://www.ijcai.org/proceedings/2022/134" target="_blank"> IJCAI'22</a>, 
-	<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9768177" target="_blank"> IEEE TNNLS'22</a>, 
-	<a href="https://ieeexplore.ieee.org/document/9987664" target="_blank"> IEEE TPAMI'22</a>, 
-	<a href="https://ieeexplore.ieee.org/document/10225587" target="_blank"> IEEE TEC'23</a>, 
+	<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9768177" target="_blank"> IEEE TNNLS'22</a>,  
 	 etc.<br> <br> 
 		   
         <strong>2. Developing the effective ZSL algorithms to tackle the visual-semantic domain shift problem. </strong> 
@@ -175,7 +173,10 @@ var _hmt = _hmt || [];
 	 aligning the empirical and actual semantic prototypes for synthesizing accurate visual features. The papers of this project have been published in 
 	<i> <a href="https://openaccess.thecvf.com/content/CVPR2022/html/Chen_MSDN_Mutually_Semantic_Distillation_Network_for_Zero-Shot_Learning_CVPR_2022_paper.html" target="_blank"> CVPR'22</a>, 
 		<a href="https://ojs.aaai.org/index.php/AAAI/article/view/19909" target="_blank"> AAAI'22</a>, 
-		<a href="https://proceedings.mlr.press/v202/chen23l/chen23l.pdf" target="_blank"> ICML'23</a> </i>, etc.<br> <br> 
+		<a href="https://ieeexplore.ieee.org/document/9987664" target="_blank"> IEEE TPAMI'22</a>, 
+	        <a href="https://ieeexplore.ieee.org/document/10225587" target="_blank"> IEEE TEC'23</a>,
+		<a href="https://proceedings.mlr.press/v202/chen23l/chen23l.pdf" target="_blank"> ICML'23</a> 
+	       </i>, etc.<br> <br> 
 		   
        <strong>3. Developing the hierarchical semantic-visual adaptation framework for visual-semantic alignment.</strong> 
 	Different to existing one-step adaptation method that on alignment the feature distributions between visual and semantic domains, 
