--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ var _hmt = _hmt || [];
 	Different to existing one-step adaptation method that on alignment the feature distributions between visual and semantic domains, 
 	this method utilizes a hierarchical adaptation to learn an intrinsic common space for semantic and visual feature representations
 	by adopting sequential structure adaptation and distribution adaptation. The papers of this project have been published in <i>
-		<a href="https://proceedings.neurips.cc/paper/2021/hash/8b0d268963dd0cfb808aac48a549829f-Abstract.html" target="_blank"> AAAI'22</a></i>.
+		<a href="https://proceedings.neurips.cc/paper/2021/hash/8b0d268963dd0cfb808aac48a549829f-Abstract.html" target="_blank"> NeurIPS'21</a></i>.
 	</span> <br> <br> 
 	<span></span><br>
 <!-- 	  <span>I come from Meizhou, Guangdong, where is known as “<i>Hakka capital</i>” and “<i> City of Football </i>”.<br> -->
