--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ var _hmt = _hmt || [];
 				[<a href="https://arxiv.org/abs/2203.03137">arXiv</a>]
 				[<a href="https://github.com/shiming-chen/MSDN">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Ziming Hong,  Guo-Sen Xie, Wenhan Yang, Qinmu Peng, Kai Wang, Jian Zhao, Xinge You.</p>
-       <p style="margin-top: -11px"><i>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2022: 7612-7621. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
+       <p style="margin-top: -11px"><i>IEEE Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2022: 7612-7621. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
 		</td>
 	</tr>
 	<tr></tr>
@@ -645,7 +645,7 @@ var _hmt = _hmt || [];
                 <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=kKMhkSHMeApLgHGqTfk5xOrHScwhlrHiRwRbeYjigWg"></script>
             </div>
            <br>
-        &copy; Shiming Chen | <span style="color:Red">Last updated: Augst 01, 2022</span>
+        &copy; Shiming Chen | <span style="color:Red">Last updated: Sept. 20, 2023</span>
             </div>
      </div>     
 	
