--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ var _hmt = _hmt || [];
 
       <h2 >News</h2>
     <div style="margin-top: 15px; overflow-y: scroll;">
+      <li><span style="color:Red">2023.11</span>, I give a talk in Harbin Institute of Technology (Shenzhen), invited by <strong><a href="https://www.dl2link.com/">Prof. Haijun Zhang</a></strong>.</li>
       <li><span style="color:Red">2023.09</span>, I give a talk in ZHEJIANG LAB, invited by <strong>Jin Zhao</strong>.</li>
       <li><span style="color:Red">2023.08</span>, one paper on zero-shot learning is accepted to <strong><i>TEC</i></strong>.</li>
       <li><span style="color:Red">2023.07</span>, one co-author paper on rainy image generation is accepted to <strong><i>ICCV'23</i></strong>.</li>
