--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@ var _hmt = _hmt || [];
 
 </script>
 
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Shiming Chen-陈使明</title>
-        <link rel="shortcut icon" href="img/chen1.jpg"/>
-        <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-	<meta name="keywords" content="Shimingchen, EIC, HUST, The Huazhong University of Science and Technology"> 
-	<meta name="description" content="Shiming Chen's home page">
-	<meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
-	<meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
-	<link rel="stylesheet" href="./css/jemdoc.css">
-	<title>Shiming Chen, Huazhong University of Science and Technology</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Shiming Chen-陈使明</title>
+<link rel="shortcut icon" href="img/chen1.jpg"/>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<meta name="keywords" content="Shimingchen, EIC, HUST, The Huazhong University of Science and Technology"> 
+<meta name="description" content="Shiming Chen's home page">
+<meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
+<meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
+<!-- <link rel="stylesheet" href="./css/jemdoc.css"> -->
+<link rel="stylesheet" href="./css/jemdoc.css" type="text/css">
+<title>Shiming Chen, Huazhong University of Science and Technology</title>
 </head>
 
 <body>
@@ -107,7 +108,9 @@ var _hmt = _hmt || [];
 	 
 
       <h2 >News</h2>
-    <div style="margin-top: 15px; overflow-y: scroll;">
+<!--     <div style="margin-top: 15px; overflow-y: scroll;"> -->
+      <div style="height: 240px; overflow: auto;">
+      <ul>
       <li><span style="color:Red">2023.11</span>, I give a talk in Harbin Institute of Technology (Shenzhen), invited by <strong><a href="https://www.dl2link.com/">Prof. Haijun Zhang</a></strong>.</li>
       <li><span style="color:Red">2023.09</span>, I give a talk in ZHEJIANG LAB, invited by <strong>Dr. Jin Zhao</strong>.</li>
       <li><span style="color:Red">2023.08</span>, one paper on zero-shot learning is accepted to <strong><i>TEC</i></strong>.</li>
@@ -140,6 +143,7 @@ var _hmt = _hmt || [];
       <li><span style="color:Red">2019.09</span>, I start my Ph.D study in EIC at <strong>HUST</strong>.</li>
       <li><span style="color:Red">2019.01</span>, one paper is accepted to <strong><i>Information Sciences (INS)</i></strong>.</li>
       <li><span style="color:Red">2018.10</span>, one paper is accepted to <strong><i>ACTA AUTOMATICA SINICA</i></strong>. </li> -->
+      </ul>ul>
     </div>
      
  
