--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ var _hmt = _hmt || [];
       <div style="height: 320px; overflow: auto;">
       <ul>
       <li><span style="color:Red">2023.11</span>, I give a talk in Harbin Institute of Technology (Shenzhen), invited by <strong><a href="https://www.dl2link.com/">Prof. Haijun Zhang</a></strong>.</li>
-      <li><span style="color:Red">2023.10</span>, I organize a <strong>VALSE Webinar</strong>strong> on the topic <a href="https://mp.weixin.qq.com/s/HzrGKmq4jXam7DCFNIMMFg"> "Zero-shot Learning in Vision"</a>. 
+      <li><span style="color:Red">2023.10</span>, I organize a <strong>VALSE Webinar</strong> on <a href="https://mp.weixin.qq.com/s/HzrGKmq4jXam7DCFNIMMFg"> "Zero-shot Learning in Vision"</a>. 
 	      Thanks for the exciting sharing of <strong><a href="https://faculty.uestc.edu.cn/jjl">Prof. Jingjing Li</a></strong>,
 	      <strong><a href="https://kaiyangzhou.github.io/">Prof. Kaiyang Zhou</a></strong>,
 	      <strong><a href="https://xianyongqin.github.io">Dr. Yongqin Xian</a></strong>, and <strong><a href="http://seea.tju.edu.cn/info/1014/1447.htm">Prof. Zhong Ji</a></strong>.
