--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ var _hmt = _hmt || [];
 		<img src="img/IJCAI22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="https://www.ijcai.org/proceedings/2022/134" target="_blank">Semantic Compression Embedding for Generative Zero-Shot Learning.</a><br>
-		<p >Ziming Hong*</strong>, <strong>Shiming Chen<sup>*#</sup></strong>, Guo-Sen Xie, Wenhan Yang, Jian Zhao, Yuanjie Shao, Qinmu Peng, Xinge You</p>
+		<p >Ziming Hong*, <strong>Shiming Chen<sup>*#</sup></strong>, Guo-Sen Xie, Wenhan Yang, Jian Zhao, Yuanjie Shao, Qinmu Peng, Xinge You</p>
 	       <p style="margin-top: -11px"><i>The 31th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2022: 956-963. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong>
 		</td>
 	</tr>
@@ -338,18 +338,7 @@ var _hmt = _hmt || [];
     <tr></tr>
 
 
-<!--    <tr>	
-		<td width="206">
-		<img src="img/ICCV23-PCGNet.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td><a href="https://www.ijcai.org/proceedings/2022/134" target="_blank">Both Diverse and Realism Matter: Physical Attribute and Style Alignment for Rainy Image Generation.</a><br>
-		<p > Changfeng Yu, <strong>Shiming Chen<sup></sup></strong>, Yi Chang, Yibing Song, Luxin Yan</p>
-	       <p style="margin-top: -11px"><i>IEEE International Conference on Computer Vision (<strong> ICCV </strong>), 2023. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-    <tr></tr>
+<!--    
 
 		       
      <tr>	
@@ -390,6 +379,25 @@ var _hmt = _hmt || [];
 	</tr>
 	<tr></tr>
 <tr></tr>
+	
+<!-- <tr>	
+		<td width="206">
+		<img src="img/TransZero-TPAMI.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="" target="_blank">Rethinking Attribute Localization for Zero-Shot Learning.</a>
+<!-- 		 <strong>
+		[<a href="TransZero-pp/TransZero-pp.html">Project Page</a>]
+		[<a href="http://arxiv.org/abs/2112.08643">arXiv</a>]
+		[<a href="https://ieeexplore.ieee.org/document/9987664">PDF</a>]
+		 </strong> -->
+		<br>
+		<p >Shuhuang Chen, <strong>Shiming Chen<sup>#</sup></strong>, Guo-Sen Xie,  Xiangbo Shu, Xinge You, Xuelong Li.</p>
+	 <p style="margin-top: -11px"> <i>SCIENCE CHINA Information Sciences (<strong> SCIS </strong>), in press, 2023. <strong>
+		 (<span style="color:Burlywood">SCI, IF=8.8, CCF Rank-A</span>)</strong></p>
+		</td>
+	</tr>
+	<tr></tr>
+<tr></tr> -->
 
 	
 <tr>	
