--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ var _hmt = _hmt || [];
 		 </strong>
 		<br>
 		<p ><strong>Shiming Chen</strong>, Ziming Hong, Wenjin Hou, Guo-Sen Xie,  Yibing Song, Jian Zhao, Xinge You, Shuicheng Yan, Ling Shao.</p>
-	 <p style="margin-top: -11px"> <i>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong> TPAMI </strong>), in press, 2022. <strong>
+	 <p style="margin-top: -11px"> <i>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong> TPAMI </strong>), 45(11):12844-12861, 2023. <strong>
 		 (<span style="color:Burlywood">SCI, IF=24.314</span>)</strong></p>
 		</td>
 	</tr>
