--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@ var _hmt = _hmt || [];
 	      <strong><a href="https://kaiyangzhou.github.io/">Prof. Kaiyang Zhou</a></strong>,
 	      <strong><a href="https://xianyongqin.github.io">Dr. Yongqin Xian</a></strong>, and <strong><a href="http://seea.tju.edu.cn/info/1014/1447.htm">Prof. Zhong Ji</a></strong>.
       </li>
+       <li><span style="color:Red">2023.04</span>, one paper on zero-shot learning is accepted to <strong><i>Science China Information Sciences</i></strong>.</li>
       <li><span style="color:Red">2023.09</span>, I give a talk in ZHEJIANG LAB, invited by <strong>Dr. Jin Zhao</strong>.</li>
       <li><span style="color:Red">2023.08</span>, one paper on zero-shot learning is accepted to <strong><i>TEC</i></strong>.</li>
       <li><span style="color:Red">2023.07</span>, one co-author paper on rainy image generation is accepted to <strong><i>ICCV'23</i></strong>.</li>
@@ -374,15 +375,15 @@ var _hmt = _hmt || [];
 		<br>
 		<p ><strong>Shiming Chen</strong>, Ziming Hong, Wenjin Hou, Guo-Sen Xie,  Yibing Song, Jian Zhao, Xinge You, Shuicheng Yan, Ling Shao.</p>
 	 <p style="margin-top: -11px"> <i>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong> TPAMI </strong>), 45(11):12844-12861, 2023. <strong>
-		 (<span style="color:Burlywood">SCI, IF=24.314</span>)</strong></p>
+		 (<span style="color:Burlywood">SCI, IF=24.314, CCF Rank-A</span>)</strong></p>
 		</td>
 	</tr>
 	<tr></tr>
 <tr></tr>
 	
-<!-- <tr>	
+<tr>	
 		<td width="206">
-		<img src="img/TransZero-TPAMI.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		<img src="img/SCIS-2022.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="" target="_blank">Rethinking Attribute Localization for Zero-Shot Learning.</a>
 <!-- 		 <strong>
@@ -392,12 +393,12 @@ var _hmt = _hmt || [];
 		 </strong> -->
 		<br>
 		<p >Shuhuang Chen, <strong>Shiming Chen<sup>#</sup></strong>, Guo-Sen Xie,  Xiangbo Shu, Xinge You, Xuelong Li.</p>
-	 <p style="margin-top: -11px"> <i>SCIENCE CHINA Information Sciences (<strong> SCIS </strong>), in press, 2023. <strong>
+	 <p style="margin-top: -11px"> <i>Science China Information Sciences (<strong> SCIS </strong>), in press, 2023. <strong>
 		 (<span style="color:Burlywood">SCI, IF=8.8, CCF Rank-A</span>)</strong></p>
 		</td>
 	</tr>
 	<tr></tr>
-<tr></tr> -->
+<tr></tr>
 
 	
 <tr>	
@@ -410,7 +411,7 @@ var _hmt = _hmt || [];
                  <br>
 		<p ><strong>Shiming Chen</strong>, Shuhuang Chen, Wenjin Hou,Weiping Ding, Xinge You.</p>
 	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEC </strong>), in press, 2023. 
-		       <strong>(<span style="color:Burlywood">SCI, IF=14.3</span>)</strong></p>
+		       <strong>(<span style="color:Burlywood">SCI, IF=14.3, CCF Rank-B</span>)</strong></p>
 		</td>
 	</tr>
 	<tr></tr>
@@ -428,7 +429,7 @@ var _hmt = _hmt || [];
 				[<a href="">PDF</a>]</strong><br>
 		<p ><strong>Shiming Chen</strong>, Ziming Hong, Guo-Sen Xie, Xinge You, Weiping Ding and Ling Shao.</p>
 	       <p style="margin-top: -11px"><i>IEEE Transactions on Neural Networks and Learning Systems (<strong> TNNLS</strong>), in press, 2022. <strong>
-		 (<span style="color:Burlywood">SCI, IF=14.255</span>)</strong></p>
+		 (<span style="color:Burlywood">SCI, IF=14.255, CCF Rank-B</span>)</strong></p>
 	<tr></tr>
     <tr></tr>
     <tr></tr>
@@ -446,7 +447,7 @@ var _hmt = _hmt || [];
                  <br>
 		<p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Xinge You, Qinmu Peng, Zehong Cao, Weiping Ding.</p>
 	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEC </strong>), 25:986-1000, 2021. 
-		       <strong>(<span style="color:Burlywood">SCI, IF=14.3</span>)</strong></p>
+		       <strong>(<span style="color:Burlywood">SCI, IF=14.3, CCF Rank-B</span>)</strong></p>
 		</td>
 	</tr>
 	<tr></tr>
