--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ var _hmt = _hmt || [];
 	
 <tr>	
 		<td width="206">
-		<img src="img/SCIS-2022.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		<img src="img/SCIS-2022.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="" target="_blank">Rethinking Attribute Localization for Zero-Shot Learning.</a>
 <!-- 		 <strong>
