--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@ var _hmt = _hmt || [];
 <!--     <div style="margin-top: 15px; overflow-y: scroll;"> -->
       <div style="height: 320px; overflow: auto;">
       <ul>
+<!--       <li><span style="color:Red">2023.11</span>, one paper on zero-shot learning is accepted to <strong><i>Science China Information Sciences</i></strong>.</li> -->
       <li><span style="color:Red">2023.11</span>, I give a talk in Harbin Institute of Technology (Shenzhen), invited by <strong><a href="https://www.dl2link.com/">Prof. Haijun Zhang</a></strong>.</li>
       <li><span style="color:Red">2023.10</span>, I organize a <strong>VALSE Webinar</strong> on <a href="https://mp.weixin.qq.com/s/HzrGKmq4jXam7DCFNIMMFg"> "Zero-shot Learning in Vision"</a>. 
 	      Thanks for the exciting sharing of <strong><a href="https://faculty.uestc.edu.cn/jjl">Prof. Jingjing Li</a></strong>,
 	      <strong><a href="https://kaiyangzhou.github.io/">Prof. Kaiyang Zhou</a></strong>,
 	      <strong><a href="https://xianyongqin.github.io">Dr. Yongqin Xian</a></strong>, and <strong><a href="http://seea.tju.edu.cn/info/1014/1447.htm">Prof. Zhong Ji</a></strong>.
       </li>
-       <li><span style="color:Red">2023.04</span>, one paper on zero-shot learning is accepted to <strong><i>Science China Information Sciences</i></strong>.</li>
       <li><span style="color:Red">2023.09</span>, I give a talk in ZHEJIANG LAB, invited by <strong>Dr. Jin Zhao</strong>.</li>
       <li><span style="color:Red">2023.08</span>, one paper on zero-shot learning is accepted to <strong><i>TEC</i></strong>.</li>
       <li><span style="color:Red">2023.07</span>, one co-author paper on rainy image generation is accepted to <strong><i>ICCV'23</i></strong>.</li>
@@ -379,7 +379,7 @@ var _hmt = _hmt || [];
 	<tr></tr>
 <tr></tr>
 	
-<tr>	
+<!-- <tr>	
 		<td width="206">
 		<img src="img/SCIS-2022.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
@@ -396,7 +396,7 @@ var _hmt = _hmt || [];
 		</td>
 	</tr>
 	<tr></tr>
-<tr></tr>
+<tr></tr> -->
 
 	
 <tr>	
